# wikipedia-transform

./: .gitignore  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: continuous-integration.yml
etl/: __init__.py  assets.py  definitions.py  jobs.py
etl/data/: output
etl/embedding_model_pipelines/: embedding_model_pipeline.py  open_ai_embedding_model_pipeline.py
etl/embedding_pipelines/: __init__.py  open_ai_embedding_model_pipeline.py
etl/generative_model_pipelines/: __init__.py  generative_model_pipeline.py  open_ai_generative_model_pipeline.py
etl/models/: __init__.py  anti_recommendation.py  anti_recommendation_graph_tuple.py  anti_recommendation_keys_by_key_tuple.py  anti_recommendations_by_key_tuple.py  base_wikipedia_url.py  data_files_config.py  document_tuple.py  open_ai_pipeline_config.py  open_ai_resource_params.py  open_ai_settings.py  output_config.py  record.py  record_tuple.py  wikipedia_base_url.py
etl/pipelines/: __init__.py  anti_recommendation_retrieval_pipeline.py  ar_kg_builder_pipeline.py  arkg_builder_pipeline.py  embedding_pipeline.py  kg_builder_pipeline.py  open_ai_embedding_pipeline.py  open_ai_record_enrichment_pipeline.py  open_ai_retrieval_pipeline.py  openai_embedding_pipeline.py  openai_record_enrichment_pipeline.py  record_enrichment_pipeline.py  retrieval_pipeline.py
etl/readers/: __init__.py  reader.py  wikipedia_reader.py
etl/resources/: __init__.py  data_files_config.py  input_config.py  input_data_files_config.py  open_ai_embedding_model_resource.py  open_ai_generative_model_resource.py  open_ai_pipeline_config.py  open_ai_settings.py  openai_pipeline_config.py  openai_settings.py  output_config.py  wikipedia_reader_resource.py
etl/utils/: __init__.py  create_documents.py  extract_anti_recommendation_key_from_tuple.py
etl_tests/: conftest.py  test_assets.py  test_defs.py
etl_tests/embedding_model_pipelines/: test_open_ai_embedding_model_pipeline.py
etl_tests/generative_model_pipelines/: test_open_ai_generative_model_pipeline.py
etl_tests/models/: test_document_tuple.py
etl_tests/pipelines/: test_anti_recommendation_retrieval_pipeline.py  test_ar_kg_builder_pipeline.py  test_arkg_builder_pipeline.py  test_open_ai_embedding_pipeline.py  test_open_ai_record_enrichment_pipeline.py  test_open_ai_retrieval_pipeline.py  test_openai_embedding_pipeline.py  test_openai_record_enrichment_pipeline.py
etl_tests/readers/: test_wikipedia_reader.py  wikipedia_reader.py
etl_tests/resources/: test_open_ai_embedding_model_resource.py  test_open_ai_generative_model_resource.py  test_wikipedia_reader_resource.py
etl_tests/utils/: test_create_documents.py
script/: bootstrap  bootstrap.sh  format  format.sh  test  test.sh
tests/wikipedia_transform/: conftest.py  (+1 more)
wikipedia_transform/: __init__.py  main.py  record_transform.py  wikipedia_transform.py
(+56 files in other folders)
