[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["imlapps"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dagster = "^1.7.9"
typer = "^0.12.3"
pydantic = "^2.7.4"
dagster-webserver = "^1.7.9"
unidecode = "^1.3.8"

[tool.dagster]
module_name = "etl" 

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
ruff = "^0.4.8"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
